--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,38 @@ a:visited {
           align-items: flex-end;
 }
 
+.delay-1500 {
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
+.delay-2500 {
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
+}
+
 .section {
   height: 100vh;
   min-height: 500px;
   max-height: 1080px;
   position: relative;
-  padding: 0;
+  padding: 0 14px;
+  overflow: hidden;
+}
+
+.section-index {
+  max-width: 100%;
+}
+
+.section-about {
+  max-width: 1366px;
+  margin: 0 auto;
+}
+
+.animated {
+  /* Enable hardware acceleration to fix laggy transitions */
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
 }
 
 /* Navbar */
@@ -186,19 +212,6 @@ nav a.sidenav-trigger i {
   font-weight: 500;
 }
 
-/* RWD */
-@media (max-width: 992px) {
-  nav {
-    height: 64px;
-  }
-  nav .brand-logo {
-    line-height: 64px;
-  }
-  .bg-title {
-    display: none;
-  }
-}
-
 .preload-section {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -224,5 +237,145 @@ nav a.sidenav-trigger i {
 .preload-section img {
   width: 100px;
   height: 100px;
+}
+
+/* ABOUT */
+.clip-work-part,
+.about-description-part {
+  height: 100%;
+  width: 100%;
+}
+
+.clip-work-part {
+  padding-top: 124px;
+}
+
+.about-clip-a,
+.about-clip-b,
+.about-clip-c,
+.about-clip-d {
+  height: 20%;
+  margin-bottom: 14px;
+}
+
+.about-clip-a {
+  -webkit-clip-path: polygon(0 0, 100% 0%, 90% 100%, 0 100%);
+          clip-path: polygon(0 0, 100% 0%, 90% 100%, 0 100%);
+}
+
+.about-clip-b {
+  -webkit-clip-path: polygon(0 0%, 89% 0%, 80% 100%, 0 100%);
+          clip-path: polygon(0 0%, 89% 0%, 80% 100%, 0 100%);
+}
+
+.about-clip-c {
+  -webkit-clip-path: polygon(0 0%, 79% 0%, 70% 100%, 0 100%);
+          clip-path: polygon(0 0%, 79% 0%, 70% 100%, 0 100%);
+}
+
+.about-clip-d {
+  -webkit-clip-path: polygon(0 0%, 69% 0%, 60% 100%, 0 100%);
+          clip-path: polygon(0 0%, 69% 0%, 60% 100%, 0 100%);
+  margin-bottom: 0px;
+}
+
+.pic-a,
+.pic-b,
+.pic-c,
+.pic-d {
+  height: 100%;
+  width: 100%;
+  -webkit-filter: blur(1px);
+          filter: blur(1px);
+  background-repeat: no-repeat;
+  background-size: 110%;
+  background-position: center;
+  position: relative;
+}
+
+.pic-a {
+  background-image: url(/img/clip/001.jpg);
+}
+
+.pic-b {
+  background-image: url(/img/clip/005.jpg);
+}
+
+.pic-c {
+  background-image: url(/img/clip/003.png);
+}
+
+.pic-d {
+  background-image: url(/img/clip/006.jpg);
+}
+
+.mask {
+  color: #fff;
+  font-family: "Open Sans";
+  font-size: 20px;
+  font-weight: 700;
+  text-shadow: 0 0px 6px rgba(0, 0, 0, 0.8);
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 14px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.mask:hover {
+  background: rgba(0, 0, 0, 0);
+}
+
+.mask:hover + .pic-a,
+.mask:hover + .pic-b,
+.mask:hover + .pic-c,
+.mask:hover + .pic-d {
+  -webkit-filter: blur(0px);
+          filter: blur(0px);
+}
+
+.about-description-part {
+  color: #1e150b;
+  font-size: 16px;
+  font-family: "Noto Sans TC";
+  font-weight: 300;
+  line-height: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 14px;
+}
+
+/* RWD */
+@media (max-width: 992px) {
+  nav {
+    height: 64px;
+  }
+  nav .brand-logo {
+    line-height: 64px;
+  }
+  .bg-title {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
