--- a/css/style.scss
+++ b/css/style.scss
@@ -73,6 +73,7 @@ a:visited {
 .container {
   width: 100%;
   max-width: 1366px;
+  // overflow: hidden;
   padding: 0 14px;
 
   height: 100%;
@@ -99,13 +100,35 @@ a:visited {
     align-items: flex-end;
   }
 }
+.delay-1500 {
+  animation-delay: 1.5s;
+}
+.delay-2500 {
+  animation-delay: 2.5s;
+}
 
 .section {
   height: 100vh;
   min-height: 500px;
   max-height: 1080px;
   position: relative;
-  padding: 0;
+  padding: 0 14px;
+  overflow: hidden;
+}
+.section-index {
+  max-width: 100%;
+}
+.section-about {
+  max-width: 1366px;
+  margin: 0 auto;
+}
+.animated {
+  /* Enable hardware acceleration to fix laggy transitions */
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
 }
 
 /* Navbar */
@@ -176,19 +199,6 @@ nav a.sidenav-trigger i {
   font-family: $enfont;
   font-weight: 500;
 }
-
-/* RWD */
-@media (max-width: 992px) {
-  nav {
-    height: 64px;
-  }
-  nav .brand-logo {
-    line-height: 64px;
-  }
-  .bg-title {
-    display: none;
-  }
-}
 .preload-section {
   display: flex;
   height: 100vh;
@@ -205,4 +215,118 @@ nav a.sidenav-trigger i {
 .preload-section img {
   width: 100px;
   height: 100px;
+}
+/* ABOUT */
+.clip-work-part,
+.about-description-part {
+  height: 100%;
+  width: 100%;
+}
+.clip-work-part {
+  padding-top: 124px;
+}
+
+.about-clip-a,
+.about-clip-b,
+.about-clip-c,
+.about-clip-d {
+  height: 20%;
+  margin-bottom: 14px;
+}
+.about-clip-a {
+  clip-path: polygon(0 0, 100% 0%, 90% 100%, 0 100%);
+}
+.about-clip-b {
+  clip-path: polygon(0 0%, 89% 0%, 80% 100%, 0 100%);
+}
+.about-clip-c {
+  clip-path: polygon(0 0%, 79% 0%, 70% 100%, 0 100%);
+}
+.about-clip-d {
+  clip-path: polygon(0 0%, 69% 0%, 60% 100%, 0 100%);
+  margin-bottom: 0px;
+}
+.pic-a,
+.pic-b,
+.pic-c,
+.pic-d {
+  height: 100%;
+  width: 100%;
+
+  filter: blur(1px);
+  background-repeat: no-repeat;
+  background-size: 110%;
+  background-position: center;
+
+  position: relative;
+}
+.pic-a {
+  background-image: url(/img/clip/001.jpg);
+}
+.pic-b {
+  background-image: url(/img/clip/005.jpg);
+}
+.pic-c {
+  background-image: url(/img/clip/003.png);
+}
+.pic-d {
+  background-image: url(/img/clip/006.jpg);
+}
+.mask {
+  color: #fff;
+  font-family: $enfont;
+  font-size: 20px;
+  font-weight: 700;
+  text-shadow: 0 0px 6px rgba(0, 0, 0, 0.8);
+
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  width: 100%;
+
+  display: flex;
+  justify-content: left;
+  align-items: center;
+
+  padding: 14px;
+  transition: 0.5s;
+
+  &:hover {
+    background: rgba(0, 0, 0, 0);
+  }
+  &:hover + .pic-a,
+  &:hover + .pic-b,
+  &:hover + .pic-c,
+  &:hover + .pic-d {
+    filter: blur(0px);
+  }
+}
+.about-description-part {
+  color: $topic;
+  font-size: 16px;
+  font-family: $cnfont;
+  font-weight: 300;
+  line-height: 24px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 0 14px;
+}
+
+/* RWD */
+@media (max-width: 992px) {
+  nav {
+    height: 64px;
+  }
+  nav .brand-logo {
+    line-height: 64px;
+  }
+  .bg-title {
+    display: none;
+  }
 }
