Working on works

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a:visited {
   color: inherit;
   text-decoration: none;
   outline: none;
-  border: none;
+  border: 0;
   font-family: "Open Sans";
   color: #4c3e31;
 }
@@ -64,6 +64,7 @@ a:visited {
           align-items: center;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .flex-wrapper.just-right {
@@ -100,6 +101,16 @@ a:visited {
           animation-delay: 2.5s;
 }
 
+.delay-3500 {
+  -webkit-animation-delay: 3.5s;
+          animation-delay: 3.5s;
+}
+
+.delay-4500 {
+  -webkit-animation-delay: 4.5s;
+          animation-delay: 4.5s;
+}
+
 .section {
   height: 100vh;
   min-height: 500px;
@@ -116,6 +127,12 @@ a:visited {
 .section-about {
   max-width: 1366px;
   margin: 0 auto;
+}
+
+.section-works {
+  max-width: 1366px;
+  margin: 0 auto;
+  padding-top: 120px;
 }
 
 .animated {
@@ -369,6 +386,17 @@ nav a.sidenav-trigger i {
   position: relative;
 }
 
+.about-description-part p span {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+
 .about-description-part p::before {
   content: "";
   position: absolute;
@@ -379,9 +407,114 @@ nav a.sidenav-trigger i {
   border-left: 1px solid #4c3e31;
   top: -30px;
   left: -30px;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: slideInLeft;
+  animation-name: slideInLeft;
+}
+
+.about-description-part p::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  height: 50px;
+  width: 50px;
+  border-bottom: 1px solid #4c3e31;
+  border-right: 1px solid #4c3e31;
+  right: -30px;
+  bottom: -30px;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: slideInRight;
+  animation-name: slideInRight;
+}
+
+/* WORKS */
+.gallery-wrapper {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+a.gallery-item {
+  display: block;
+  -webkit-box-flex: .25;
+      -ms-flex: .25;
+          flex: .25;
+  max-width: 100%;
+  overflow: hidden;
+  border-radius: 5px;
+  padding: 14px;
+  border: 1px solid #dedede;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+a.gallery-item:hover {
+  background: #f3f3f3;
+}
+
+.gallery-item-head {
+  width: 100%;
+  padding-top: 56.25%;
+  background: gold;
+  position: relative;
+}
+
+.gallery-item-head-img-wrapper {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.gallery-item-body {
+  padding: 14px 0 0 0;
+}
+
+.gallery-item-title {
+  font-size: 16px;
+  font-weight: 700px;
+  font-family: "Noto Sans TC";
+  margin-bottom: 14px;
+}
+
+.gallery-item-content {
+  font-size: 14px;
+  font-family: "Noto Sans TC";
+  font-weight: 300;
+  color: #b2b2b2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.gallery-item-content-time {
+  font-family: "Open Sans";
 }
 
 /* RWD */
+@media (max-width: 1366px) {
+  .section {
+    max-width: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+}
+
 @media (max-width: 992px) {
   nav {
     height: 64px;
