--- a/css/style.scss
+++ b/css/style.scss
@@ -60,7 +60,7 @@ a:visited {
   color: inherit;
   text-decoration: none;
   outline: none;
-  border: none;
+  border: 0;
   font-family: $enfont;
   color: $topichover;
 }
@@ -86,25 +86,39 @@ a:visited {
   align-items: center;
   width: 100%;
   height: 100%;
+  position: relative;
 
   &.just-right {
     justify-content: flex-end;
   }
+
   &.just-left {
     justify-content: flex-start;
   }
+
   &.align-start {
     align-items: flex-start;
   }
+
   &.align-end {
     align-items: flex-end;
   }
 }
+
 .delay-1500 {
   animation-delay: 1.5s;
 }
+
 .delay-2500 {
   animation-delay: 2.5s;
+}
+
+.delay-3500 {
+  animation-delay: 3.5s;
+}
+
+.delay-4500 {
+  animation-delay: 4.5s;
 }
 
 .section {
@@ -115,13 +129,22 @@ a:visited {
   padding: 0 14px;
   overflow: hidden;
 }
+
 .section-index {
   max-width: 100%;
 }
+
 .section-about {
   max-width: 1366px;
   margin: 0 auto;
 }
+
+.section-works {
+  max-width: 1366px;
+  margin: 0 auto;
+  padding-top: 120px;
+}
+
 .animated {
   /* Enable hardware acceleration to fix laggy transitions */
   -webkit-transform: translateZ(0);
@@ -140,36 +163,43 @@ nav {
   z-index: 100;
   height: 100px;
 }
+
 nav .brand-logo {
   font-family: $logofont;
   font-size: 24px;
   display: flex;
   line-height: 100px;
 }
+
 nav ul {
   display: flex;
   align-items: center;
   height: 100%;
 }
+
 nav ul a {
   color: $topic;
   font-weight: 500;
   line-height: 32px;
 }
+
 nav ul li {
   margin-left: 14px;
 }
+
 nav,
 nav .nav-wrapper i,
 nav a.sidenav-trigger,
 nav a.sidenav-trigger i {
   color: $topic;
 }
+
 /* sidenav */
 .sidenav li a {
   font-weight: 500;
   color: $topic;
 }
+
 /* main-section */
 .zq-description,
 .zq-pic,
@@ -178,6 +208,7 @@ nav a.sidenav-trigger i {
   height: 100%;
   position: relative;
 }
+
 .zq-pic img {
   position: absolute;
   z-index: 10;
@@ -185,11 +216,13 @@ nav a.sidenav-trigger i {
   min-height: 650px;
   top: 0px;
 }
+
 .bg-title {
   position: absolute;
   width: 100%;
   max-width: calc(1366px - 28px);
 }
+
 .zq-d-content,
 .zq-more {
   position: absolute;
@@ -199,6 +232,7 @@ nav a.sidenav-trigger i {
   font-family: $enfont;
   font-weight: 500;
 }
+
 .preload-section {
   display: flex;
   height: 100vh;
@@ -212,16 +246,19 @@ nav a.sidenav-trigger i {
   color: $topichover;
   letter-spacing: 5px;
 }
+
 .preload-section img {
   width: 100px;
   height: 100px;
 }
+
 /* ABOUT */
 .clip-work-part,
 .about-description-part {
   height: 100%;
   width: 100%;
 }
+
 .clip-work-part {
   padding-top: 124px;
 }
@@ -233,19 +270,24 @@ nav a.sidenav-trigger i {
   height: 20%;
   margin-bottom: 14px;
 }
+
 .about-clip-a {
   clip-path: polygon(0 0, 100% 0%, 90% 100%, 0 100%);
 }
+
 .about-clip-b {
   clip-path: polygon(0 0%, 89% 0%, 80% 100%, 0 100%);
 }
+
 .about-clip-c {
   clip-path: polygon(0 0%, 79% 0%, 70% 100%, 0 100%);
 }
+
 .about-clip-d {
   clip-path: polygon(0 0%, 69% 0%, 60% 100%, 0 100%);
   margin-bottom: 0px;
 }
+
 .pic-a,
 .pic-b,
 .pic-c,
@@ -261,18 +303,23 @@ nav a.sidenav-trigger i {
   position: relative;
   cursor: pointer;
 }
+
 .pic-a {
   background-image: url(/img/clip/001.jpg);
 }
+
 .pic-b {
   background-image: url(/img/clip/005.jpg);
 }
+
 .pic-c {
   background-image: url(/img/clip/003.png);
 }
+
 .pic-d {
   background-image: url(/img/clip/006.jpg);
 }
+
 .mask {
   color: #fff;
   font-family: $enfont;
@@ -298,13 +345,15 @@ nav a.sidenav-trigger i {
   &:hover {
     background: rgba(0, 0, 0, 0);
   }
-  &:hover + .pic-a,
-  &:hover + .pic-b,
-  &:hover + .pic-c,
-  &:hover + .pic-d {
+
+  &:hover+.pic-a,
+  &:hover+.pic-b,
+  &:hover+.pic-c,
+  &:hover+.pic-d {
     filter: blur(0px);
   }
 }
+
 .about-description-part {
   color: $topic;
   font-size: 16px;
@@ -317,9 +366,21 @@ nav a.sidenav-trigger i {
   align-items: center;
 
   padding: 0 14px;
+
   p {
     position: relative;
+
+    span {
+      -webkit-animation-duration: 1s;
+      animation-duration: 1s;
+      -webkit-animation-fill-mode: both;
+      animation-fill-mode: both;
+      -webkit-animation-name: fadeIn;
+      animation-name: fadeIn;
+      animation-delay: 1.5s;
+    }
   }
+
   p::before {
     content: "";
     position: absolute;
@@ -330,17 +391,121 @@ nav a.sidenav-trigger i {
     border-left: 1px solid $topichover;
     top: -30px;
     left: -30px;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-name: slideInLeft;
+    animation-name: slideInLeft;
+  }
+
+  p::after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    height: 50px;
+    width: 50px;
+    border-bottom: 1px solid $topichover;
+    border-right: 1px solid $topichover;
+    right: -30px;
+    bottom: -30px;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-name: slideInRight;
+    animation-name: slideInRight;
   }
 }
 
+/* WORKS */
+
+.gallery-wrapper {
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+a.gallery-item {
+  display: block;
+  flex: .25;
+
+  max-width: 100%;
+  overflow: hidden;
+
+  border-radius: 5px;
+  padding: 14px;
+  border: 1px solid $c;
+
+  transition: .5s;
+
+  &:hover {
+    background: $b;
+  }
+}
+
+.gallery-item-head {
+  width: 100%;
+  padding-top: 56.25%;
+  background: gold;
+  position: relative;
+}
+
+.gallery-item-head-img-wrapper {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.gallery-item-body {
+  padding: 14px 0 0 0;
+}
+
+.gallery-item-title {
+  font-size: 16px;
+  font-weight: 700px;
+  font-family: $cnfont;
+  margin-bottom: 14px;
+}
+
+.gallery-item-content {
+  font-size: 14px;
+  font-family: $cnfont;
+  font-weight: 300;
+  color: $d;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.gallery-item-content-time {
+  font-family: $enfont;
+}
+
 /* RWD */
+@media (max-width: 1366px) {
+  .section {
+    max-width: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+
+  .zq-d-content {
+    // left: 14px;
+  }
+}
+
 @media (max-width: 992px) {
   nav {
     height: 64px;
   }
+
   nav .brand-logo {
     line-height: 64px;
   }
+
   .bg-title {
     display: none;
   }
