--- a/css/style.scss
+++ b/css/style.scss
@@ -20,7 +20,7 @@ $logofont: "Zilap";
 
 // 自定義色彩設定
 
-$bg: #fff;
+$bg: #f4f4f4;
 $bk: #000;
 $a: #f7f7f7;
 $b: #f3f3f3;
@@ -45,7 +45,6 @@ body {
   background: $bg;
   color: $topic;
 }
-
 img {
   object-fit: cover;
   object-position: center;
@@ -346,10 +345,10 @@ nav a.sidenav-trigger i {
     background: rgba(0, 0, 0, 0);
   }
 
-  &:hover+.pic-a,
-  &:hover+.pic-b,
-  &:hover+.pic-c,
-  &:hover+.pic-d {
+  &:hover + .pic-a,
+  &:hover + .pic-b,
+  &:hover + .pic-c,
+  &:hover + .pic-d {
     filter: blur(0px);
   }
 }
@@ -428,19 +427,20 @@ nav a.sidenav-trigger i {
 
 a.gallery-item {
   display: block;
-  flex: .25;
+  flex: 0.25;
 
   max-width: 100%;
   overflow: hidden;
 
   border-radius: 5px;
   padding: 14px;
+  margin: 0 14px 0 0;
   border: 1px solid $c;
 
-  transition: .5s;
+  transition: 0.5s;
 
   &:hover {
-    background: $b;
+    background: $c;
   }
 }
 
@@ -468,20 +468,72 @@ a.gallery-item {
   font-weight: 700px;
   font-family: $cnfont;
   margin-bottom: 14px;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .gallery-item-content {
   font-size: 14px;
   font-family: $cnfont;
   font-weight: 300;
-  color: $d;
+  color: $e;
+  width: 100%;
 
   display: flex;
   justify-content: space-between;
 }
 
+.gallery-item-content-des,
+.gallery-item-content-time {
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .gallery-item-content-time {
   font-family: $enfont;
+}
+
+nav .nav-wrapper i.backer {
+  color: $d;
+  margin-right: 10px;
+  font-size: 16px;
+}
+
+/* INSIDE THE WORK */
+.banner-section {
+  width: 100%;
+  padding-top: 120px;
+}
+.banner-img-wrapper {
+  padding: 14px;
+  margin: 14px;
+  border: 1px solid $c;
+  border-radius: 5px;
+  text-align: center;
+}
+.banner-title {
+  font-size: 24px;
+  font-weight: 700;
+  padding-bottom: 14px;
+  margin-bottom: 14px;
+
+  border-bottom: 1px solid $c;
+}
+.work-content-section {
+  font-size: 16px;
+  font-weight: 300;
+  padding: 14px;
+}
+.work-content-title {
+  font-size: 24px;
+}
+.work-content-details {
+  padding: 14px 0;
+  line-height: 24px;
 }
 
 /* RWD */
