--- a/works/ecs/css/index.css
+++ b/works/ecs/css/index.css
@@ -810,3 +810,26 @@ input#myelement {
 	overflow: auto;
 	margin-bottom: 5em;
 }
+
+.togallery {
+	position: absolute;
+	left: 14px;
+	top: 14px;
+	padding: 15px 35px;
+	border-radius: 40px;
+	color: #b2b2b2;
+	border: 1px solid #b2b2b2;
+	transition: .3s;
+}
+
+  
+.togallery:hover {
+		background: rgba(178, 178, 178, 0.2);
+}
+
+.backer {
+	color: #b2b2b2;
+	margin-right: 10px;
+	font-size: 16px;
+}
+  
