--- a/css/style.scss
+++ b/css/style.scss
@@ -519,6 +519,12 @@ nav .nav-wrapper i.backer, .backer {
   border: 1px solid $c;
   border-radius: 5px;
   text-align: center;
+
+  img {
+    width: 60%;
+    margin: 10px auto;
+    border-radius: 10px;
+  }
 }
 
 .banner-title {
@@ -562,6 +568,41 @@ nav .nav-wrapper i.backer, .backer {
 
 .work-static-website:hover {
   background: rgba(0, 0, 0, 0.1);
+}
+.tags {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  display: flex;
+}
+.rwd-tag,.multi-browser-tag {
+  padding: 5px 15px;
+  color: $bg;
+  font-weight: 500;
+  margin-right: 5px;
+  font-family: $cnfont, $enfont;
+  font-size: 14px
+}
+
+.rwd-tag {
+  background: rgba(239,49,124,1);
+  background: -moz-linear-gradient(left, rgba(239,49,124,1) 0%, rgba(254,112,103,1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(239,49,124,1)), color-stop(100%, rgba(254,112,103,1)));
+  background: -webkit-linear-gradient(left, rgba(239,49,124,1) 0%, rgba(254,112,103,1) 100%);
+  background: -o-linear-gradient(left, rgba(239,49,124,1) 0%, rgba(254,112,103,1) 100%);
+  background: -ms-linear-gradient(left, rgba(239,49,124,1) 0%, rgba(254,112,103,1) 100%);
+  background: linear-gradient(to right, rgba(239,49,124,1) 0%, rgba(254,112,103,1) 100%);
+
+}
+
+.multi-browser-tag {
+  background: rgb(49, 163, 239);
+  background: -moz-linear-gradient(left, rgba(49, 163, 239,1) 0%, rgb(157, 121, 255) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(49, 163, 239,1)), color-stop(100%, rgba(157, 121, 255,1)));
+  background: -webkit-linear-gradient(left, rgba(49, 163, 239,1) 0%, rgba(157, 121, 255,1) 100%);
+  background: -o-linear-gradient(left, rgba(49, 163, 239,1) 0%, rgba(157, 121, 255,1) 100%);
+  background: -ms-linear-gradient(left, rgba(49, 163, 239,1) 0%, rgba(157, 121, 255,1) 100%);
+  background: linear-gradient(to right, rgba(49, 163, 239,1) 0%, rgba(157, 121, 255,1) 100%);
 }
 
 
